# pr9-qt-app-creator

./: LICENSE  README.md
src/: .gitignore  CMakeLists.txt
src/src/: CMakeLists.txt  main.cpp  project_generator.cpp  project_generator.h
src/src/exceptions/: empty_input_exception.cpp  empty_input_exception.h
src/src/res/: resource.qrc
src/src/res/templates/: CMakeLists.txt.template
src/src/res/templates/src/: CMakeLists.txt.template  main.cpp.template
src/src/res/templates/src/gui/: frm_main.cpp.template  frm_main.h.template  frm_main.ui.template
